--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body {
+qbody {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -17,7 +17,7 @@ body {
     height: auto; 
     position: absolute;
     top: -10px; 
-    left: 360px; 
+    left: 500px; 
 }
 .shinzo-image {
     width: 2000px;
